2022-02-15  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] --update should be synonomous with --rebase
        https://bugs.webkit.org/show_bug.cgi?id=236658
        <rdar://problem/88979674>

        Reviewed by Ryan Haddad.

        When working on a branch, `update` and `rebase` mean approximately
        the same thing. `git-webkit pr` should support both.

        * Scripts/libraries/webkitscmpy/setup.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/program/pull_request.py:
        (PullRequest.parser):

2022-02-15  Per Arne Vollan  <pvollan@apple.com>

        REGRESSION(r289147): Two API tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=236376
        <rdar://88586730>

        Reviewed by Alexey Proskuryakov.

        After r289147, the WebContent process can no longer consume sandbox extensions to the CF preference daemon.
        Update the test expectations.

        * TestWebKitAPI/Tests/WebKit/EnableAccessibility.mm:
        (TEST):
        * TestWebKitAPI/Tests/WebKit/GrantAccessToPreferencesService.mm:
        (TEST):

2022-02-15  Jonathan Bedard  <jbedard@apple.com>

        git-webkit setup should verify the credentials before saving them
        https://bugs.webkit.org/show_bug.cgi?id=235298
        <rdar://problem/87988794>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitbugspy/setup.py: Bump version.
        * Scripts/libraries/webkitbugspy/webkitbugspy/__init__.py: Ditto.
        * Scripts/libraries/webkitbugspy/webkitbugspy/bugzilla.py:
        (Tracker.credentials): Pass validater into webkitscmpy.credentials if caller requests validation.
        * Scripts/libraries/webkitbugspy/webkitbugspy/github.py:
        (Tracker.credentials): Pass validater into webkitscmpy.credentials if caller requests validation.
        * Scripts/libraries/webkitcorepy/setup.py: Bump version.