@@ -1,5 +1,17 @@
 2022-02-15  Jonathan Bedard  <jbedard@apple.com>
 
+        [EWS] Use EWS as commit author when rebasing
+        https://bugs.webkit.org/show_bug.cgi?id=236650
+        <rdar://problem/88967428>
+
+        Reviewed by Aakash Jain.
+
+        * CISupport/ews-build/steps.py:
+        (CheckOutPullRequest): Use 'EWS <ews@webkit.org>' as the commit author.
+        * CISupport/ews-build/steps_unittest.py:
+
+2022-02-15  Jonathan Bedard  <jbedard@apple.com>
+
         [git-webkit] --update should be synonomous with --rebase
         https://bugs.webkit.org/show_bug.cgi?id=236658
         <rdar://problem/88979674>
